# Financial_ML

./: DNN.md  README.md  app.py  app_web.py  compare.py  data-adjust.py  data-clean.py  fuzz_dnn_full_model.keras  hello.py  pyproject.toml  scanner.py  test.py  testing_pred.py  visualise.ipynb  working.ipynb
DockerTest/: Dockerfile  app_web.py  requirements.txt
DockerTest/model/: fuzzy_dnn_scaler.pkl
dataset/: expense_data_1.csv  lower_income.csv  lower_income1.csv  lower_income_old.csv  monthly_spending_lower_labeled.csv  monthly_spending_lower_labeled_flipped.csv  monthly_spending_upper_labeled.csv  monthly_spending_upper_labeled_flipped.csv  upper_income.csv  upper_income1.csv
model/: fuzz_dnn_full_model.keras  fuzz_dnn_weights.weights.h5
preprocessing/: data-augment.py  data-merge.py
